--- a/SportsConnect/HTML/index.html
+++ b/SportsConnect/HTML/index.html
@@ -29,7 +29,7 @@
                 <p>Explore player profiles, join tournaments. Register now to elevate your sports experience and </p>
                     <p>connect with a community passionate about competition.</p>
             </div>
-            <a class="link" href="../PHP/player_reg.php">Join As Player</a>
+            <a class="link" href="../Player_php/player_reg.php">Join As Player</a>
         </div>
         <div class="half2" id="half2">
             <img id="football" src="../Images/player.jpeg" alt="football">
@@ -44,7 +44,7 @@
                 <p>Take control of the game! As a tournament organizer, manage events seamlessly and </p>
                 <p>connect with talented players. Register now</p>
             </div>
-            <a  class="link"  href="../PHP/organizer_reg.php">Join As Organizer</a>
+            <a  class="link"  href="../Org_php/organizer_reg.php">Join As Organizer</a>
         </div>
     </section>
     
